# SensePlatform

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  demo.py  docker-compose.yml
docs/: quickstart.md
examples/contact-center/: agent.py
examples/contact_center/: agent.py
examples/fitness-coach/: agent.py
examples/sales-coach/: agent.py
examples/security-soc/: agent.py  supervisor.py
examples/telehealth/: agent.py
sdks/sense-js/: package.json  tsconfig.base.json
sdks/sense-py/: README.md  pyproject.toml
sdks/sense-py/sense/: __init__.py  client.py  lens.py  models.py  wire.py
services/console/: Dockerfile  next.config.ts  package.json  tailwind.config.ts
services/console/src/app/: globals.css  layout.tsx
services/console/src/app/(auth)/login/: page.tsx
services/console/src/app/(dashboard)/: layout.tsx
services/console/src/app/(dashboard)/agents/: page.tsx
services/console/src/app/(dashboard)/dashboard/: page.tsx
services/console/src/app/(dashboard)/keys/: page.tsx
services/console/src/app/(dashboard)/rooms/: page.tsx
services/console/src/app/(dashboard)/usage/: page.tsx
services/console/src/app/(dashboard)/webhooks/: page.tsx
services/console/src/components/dashboard/: stats-cards.tsx
services/console/src/components/layout/: header.tsx  sidebar.tsx
services/console/src/lib/: api.ts  utils.ts
services/gate/: Dockerfile  alembic.ini  pyproject.toml
services/gate/alembic/: env.py
services/gate/alembic/versions/: 001_initial_schema.py
services/gate/sense_gate/: __init__.py  config.py  database.py  deps.py  main.py
services/gate/sense_gate/middleware/: __init__.py  rate_limit.py
services/gate/sense_gate/models/: __init__.py  tenant.py  usage.py
services/gate/sense_gate/routers/: __init__.py  agents.py  auth.py  rooms.py  tenants.py  usage.py  webhooks.py
services/gate/sense_gate/services/: __init__.py  agent_service.py  jwt_service.py  relay_service.py  webhook_service.py
services/mind/: Dockerfile  pyproject.toml
services/mind/sense_mind/: __init__.py  bridge.py  mind.py  pool.py  runner.py
services/mind/sense_mind/core/agents/: agents.py
services/mind/sense_mind/core/llm/: events.py  realtime.py
services/mind/sense_mind/core/tts/: events.py  tts.py
services/mind/sense_mind/lenses/: __init__.py  base_lens.py  face_lens.py  guard_lens.py  mood_lens.py  pose_lens.py
services/mind/sense_mind/plugins/assemblyai/: stt.py
services/mind/sense_mind/plugins/fish/: stt.py  tts.py
services/mind/sense_mind/plugins/gemini/: gemini_realtime.py
services/mind/sense_mind/plugins/huggingface/: __init__.py  events.py  huggingface_llm.py  huggingface_vlm.py  transformers_detection.py  transformers_llm.py  transformers_vlm.py
services/mind/sense_mind/plugins/moondream/vlm/: moondream_cloud_vlm.py  moondream_local_vlm.py
services/mind/sense_mind/plugins/nvidia/: nvidia_vlm.py
services/mind/sense_mind/plugins/openai/: openai_llm.py  openai_realtime.py
services/mind/sense_mind/plugins/qwen/: qwen_realtime.py
services/mind/sense_mind/plugins/roboflow/: annotation.py  roboflow_cloud_processor.py  roboflow_local_processor.py
services/mind/sense_mind/plugins/xai/: llm.py
services/mind/sense_mind/transport/: relay_transport.py
services/postgres/: init.sql
services/relay/: sense-relay.yaml
services/wire/: Dockerfile  pyproject.toml
services/wire/sense_wire/: __init__.py  config.py  database.py  deps.py  main.py
services/wire/sense_wire/models/: __init__.py  channel.py  message.py
services/wire/sense_wire/pubsub/: __init__.py  redis_pubsub.py
services/wire/sense_wire/routers/: __init__.py  channels.py  events.py  messages.py
services/wire/sense_wire/ws/: __init__.py  events.py  handler.py  manager.py
