[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sense-platform"
version = "0.1.0"
description = "Python SDK for Sense Platform — build AI-powered video, voice, and vision apps"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Sense Platform Contributors" }]
keywords = ["webrtc", "ai", "vision", "real-time", "voice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Chat",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "httpx>=0.27",
    "websockets>=12.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff"]

[project.urls]
Homepage = "https://github.com/VenkataAnilKumar/SensePlatform"
Documentation = "https://github.com/VenkataAnilKumar/SensePlatform/tree/main/docs"
Repository = "https://github.com/VenkataAnilKumar/SensePlatform"

[tool.hatch.build.targets.wheel]
packages = ["sense"]

[tool.ruff]
line-length = 100
target-version = "py311"
